// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Optimistic batching usePhotos should do a batch update 1`] = `
Array [
  Object {
    "id": "1",
    "liked": false,
    "locked": false,
    "title": "Photo #1",
  },
  Object {
    "id": "2",
    "liked": false,
    "locked": false,
    "title": "Photo #2",
  },
  Object {
    "id": "3",
    "liked": false,
    "locked": false,
    "title": "Photo #3",
  },
  Object {
    "id": "4",
    "liked": false,
    "locked": false,
    "title": "Photo #4",
  },
  Object {
    "id": "5",
    "liked": false,
    "locked": false,
    "title": "Photo #5",
  },
]
`;

exports[`Optimistic batching usePhotos should do a batch update 2`] = `
Array [
  Object {
    "id": "1",
    "liked": true,
    "locked": false,
    "title": "Photo #1",
  },
  Object {
    "id": "2",
    "liked": false,
    "locked": false,
    "title": "Photo #2",
  },
  Object {
    "id": "3",
    "liked": true,
    "locked": false,
    "title": "Photo #3",
  },
  Object {
    "id": "4",
    "liked": false,
    "locked": false,
    "title": "Photo #4",
  },
  Object {
    "id": "5",
    "liked": false,
    "locked": false,
    "title": "Photo #5",
  },
]
`;

exports[`Optimistic batching usePhotos should mark items as pending while API call is being processed 1`] = `
Array [
  Object {
    "id": "1",
    "liked": true,
    "locked": true,
    "title": "Photo #1",
  },
  Object {
    "id": "2",
    "liked": true,
    "locked": true,
    "title": "Photo #2",
  },
]
`;

exports[`Optimistic batching usePhotos should mark items as pending while API call is being processed 2`] = `
Array [
  Object {
    "id": "1",
    "liked": true,
    "locked": false,
    "title": "Photo #1",
  },
  Object {
    "id": "2",
    "liked": true,
    "locked": false,
    "title": "Photo #2",
  },
  Object {
    "id": "3",
    "liked": false,
    "locked": false,
    "title": "Photo #3",
  },
  Object {
    "id": "4",
    "liked": false,
    "locked": false,
    "title": "Photo #4",
  },
  Object {
    "id": "5",
    "liked": false,
    "locked": false,
    "title": "Photo #5",
  },
]
`;

exports[`Optimistic batching usePhotos should revert items after failed API call 1`] = `
Array [
  Object {
    "id": "1",
    "liked": true,
    "locked": true,
    "title": "Photo #1",
  },
  Object {
    "id": "2",
    "liked": true,
    "locked": true,
    "title": "Photo #2",
  },
]
`;

exports[`Optimistic batching usePhotos should revert items after failed API call 2`] = `
Array [
  Object {
    "id": "1",
    "liked": false,
    "locked": false,
    "title": "Photo #1",
  },
  Object {
    "id": "2",
    "liked": false,
    "locked": false,
    "title": "Photo #2",
  },
  Object {
    "id": "3",
    "liked": false,
    "locked": false,
    "title": "Photo #3",
  },
  Object {
    "id": "4",
    "liked": false,
    "locked": false,
    "title": "Photo #4",
  },
  Object {
    "id": "5",
    "liked": false,
    "locked": false,
    "title": "Photo #5",
  },
]
`;
